# spark-cli

./: .gitignore  CODE_REVIEW.md  MANIFEST.in  README.md  plan.html  plan.md  pyproject.toml
.github/workflows/: ci.yml
spark/: cli.py  main.py
spark/scaffold/: .env.tpl  .gitignore.tpl  README.md.tpl  process-compose.yaml.tpl
spark/scaffold/.github/workflows/: ci.yaml.tpl
spark/scaffold/alembic/: env.py.tpl
spark/scaffold/app/: main.py.tpl  models.py.tpl  schemas.py.tpl
spark/scaffold/app/core/: auth.py.tpl  database.py.tpl  exceptions.py.tpl  logging_config.py.tpl
spark/scaffold/app/middleware/: logging_middleware.py.tpl
spark/scaffold/app/services/: auth_service.py.tpl  user_service.py.tpl
spark/utils/: add_route.py  api.py  deps.py  exceptions.py  template_config.py
tests/unit/utils/: test_add_route.py  test_alembic.py  test_create_api_project.py  test_dependencies.py
