[project]
name = "spark"
version = "0.1.0"
description = "CLI scaffolding tool — generate production-ready project structures from templates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
